--- a/Projet/build.xml
+++ b/Projet/build.xml
@@ -2,10 +2,8 @@
     <property name="src" location="src"/>
     <property name="build" location="bin"/>
     <target name="init">
+        <delete dir="${build}"/>
         <mkdir dir="${build}"/>
-    </target>
-    <target name="run">
-        <java classname="server.Serveur" classpath="${build}"></java>
     </target>
     <target name="compile" depends="init">
         <javac srcdir="${src}" destdir="${build}"/>
